src/compiler/z42.Tests/Fixtures/errors/wrong_arg_count/source.z42
namespace Demo;

int Add(int a, int b) {
    return a + b;
}

void Main() {
    var x = Add(1, 2, 3);
}
